Add server push test and iOS PWA support
